0.179

- Update to BVal 2.0.0
- Report server port when bind fails in HttpServer

0.178

- Limit the size of HTTP server request log by default.
- Prevent ClassPathResourceHandler from using default encoding.
- Make joda-time dependency optional for JSON module.
- Return correct status code from JaxrsTestingHttpProcessor.

0.177

- Update to Jetty 9.4.14.v20181114.

0.176

- Upgrade to Jackson 2.9.7
- Fix extraction of level when deserializing QuantileDigest.

0.175

- Require at least one stream for HTTP/2 in HTTP server.
- Fix /v1/jmx HTML page loading in modern browsers.
- Fix loading of properties files when platform's default encoding is not
  ASCII-compatible.
- Add configuration properties for request and response HTTP client buffer sizes.
- Install Jackson ParameterNamesModule module by default.
- Stop request log on HTTP server shutdown.
- Improve Quantile Digest serialization format to use less space and to
  include a version number. The format is now stable and documented.
- Optimize performance of Quantile Digest histogram construction.

0.174

- Add configuration properties to include/exclude HTTPS cipher suites for
  the HTTP client.

0.173

- Fix double logging bug in HTTP client.
- Update to Jetty 9.4.12.v20180830.
- Update the default value of the "http-server.https.excluded-cipher" config
  property to match Jetty's default excluded cipher suites. Specifically, all
  ciphers without forward secrecy, and all ciphers that use the RSA key exchange 
  algorithm are excluded by default. Consequently, TLS 1.0 or TLS 1.1 are no
  longer supported by default.

0.172

- Update to Jetty 9.4.12.RC0.
- Add support for PKCS #1 private keys to PemReader.

0.171

- Periodically flush HTTP server and HTTP client logs.
- Fix HTTP client to preserve User-Agent when following redirects.
- Make following redirects configurable for HTTP client.
- Allow HTTP client to preserve Authorization when following redirects.